--- a/data/processed/.gitignore
+++ b/data/processed/.gitignore
@@ -1,2 +1,6 @@
+# SPDX-FileCopyrightText: Contributors to the utility-route-project and Alliander N.V.
+#
+# SPDX-License-Identifier: Apache-2.0
+
 *
 !.gitignore
